[master] Implemented sessions. Improved design. Added login functionality.

--- a/public/views/home/home.pug
+++ b/public/views/home/home.pug
@@ -2,7 +2,7 @@
   .container
     br
     br
-    h1.header.center.orange-text Starter Template
+    h1.header.center.orange-text Test: #{test}
     .row.center
       h5.header.col.s12.light A modern responsive front-end framework based on Material Design
     .row.center
