--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,3 +7,18 @@
 }
 /* =================== */
 
+.no-margin-top {
+  margin-top: 0;
+}
+
+.no-margin-bottom {
+  margin-bottom: 0;
+}
+
+#login .alert {
+  display: none;
+}
+
+#login .preloader-wrapper {
+  display: none;
+}
