--- a/public/views/nav.pug
+++ b/public/views/nav.pug
@@ -9,7 +9,7 @@ nav.light-blue.lighten-1(role='navigation')
       li
         a(href='/login') Login
       li
-        a(href='/user')
+        a(href='/logout')
           i.material-icons face
     ul#nav-mobile.side-nav
       li
@@ -19,6 +19,6 @@ nav.light-blue.lighten-1(role='navigation')
       li
         a(href='/login') Login
       li
-        a(href='/user') User
+        a(href='/logout') User
     a.button-collapse(href='#', data-activates='nav-mobile')
       i.material-icons menu
