[master] Implemented registration process.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,3 +22,11 @@
 #login .preloader-wrapper {
   display: none;
 }
+
+#register .alert {
+  display: none;
+}
+
+#register .preloader-wrapper {
+  display: none;
+}
